# mcp-py

./: README.md
fastmcp-test/: README.md  main.py  pyproject.toml
langchain-agent/: .env.template  README.md  main.py  pyproject.toml
langchain-mcp-test/: .env.template  README.md  main.py  pyproject.toml
langchain-mcp-test/servers/: math_server.py  weather_server.py
langchain-test/: .env.template  README.md  main.py  pyproject.toml
mcp-resources/: README.md  main.py  pyproject.toml
multiclient-mcp/: README.md  main.py  pyproject.toml
multiclient-mcp/servers/: math_server.py  weather_server.py
shellserver/: .dockerignore  Dockerfile  README.md  build.sh  pyproject.toml  server.py
shellserver/.cursor/: python.mdc
